# nova-namer-gpt

./: .gitattributes  .gitignore  README.md  config.py  model.py  prepare_data.py  pyproject.toml  pytest.ini  sample.py  train.py  training_utils.py
config/: config.py
data/: meta.pkl  prepare_data.py
saved_models/: .gitignore
saved_models/demo/: config.json  model.pt  vocab_meta.pkl
saved_models/demo/samples/: samples_20250623_213445.txt
tests/: conftest.py  test_model.py  test_prepare_data.py  test_sample.py  test_train.py
