[project]
name = "bavcityGPT"
version = "0.1.0"
description = "A lightweight GPT implementation for generating Bavarian city names"
dependencies = [
    "torch",
    "numpy",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
